# xipeng

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  traj_split_table.sql
.cargo/: config.toml
algorithms/src/: lib.rs  lines.rs
data/: Cargo.toml
data/sql/: cog.sql  dimensions.sql  draught.sql  gps_position.sql  nav_status.sql  rot.sql  soq.sql  traj_split_table.sql  trajectories.sql
data/src/: errors.rs  lib.rs
data/src/loaders/: csv.rs  database.rs
data/src/tables/: cog.rs  dimensions.rs  gps_position.rs  mod.rs  nav_status.rs  rot.rs  ship_draught.rs  sog.rs  stop_object.rs  trajectories.rs
linesonmaps/: Cargo.toml  testoutput.txt
linesonmaps/src/: lib.rs  linestring.rs
linesonmaps/src/algo/: mod.rs  segmenter.rs  stop_cluster.rs
linesonmaps/src/algo/resources/: 205689000.txt  207138000.txt  219013708.txt  219013708_bad_part.txt  245543000.txt  point.wkb.txt
linesonmaps/src/types/: consts.rs  coordm.rs  error.rs  linem.rs  linestringm.rs  mod.rs  multilinestringm.rs  multipointm.rs  pointm.rs
modeling/: Cargo.toml
modeling/src/: lib.rs  modeling.rs
resources/: line.txt
segment_experiment/: Cargo.toml
segment_experiment/src/: main.rs
solomon/: Cargo.toml
solomon/src/: main.rs
tileheater/: Cargo.toml  tileheater.control
tileheater/src/: lib.rs  types.rs
tileheater/tests/pg_regress/expected/: setup.out
tilerizer/: Cargo.toml
tilerizer/src/: lib.rs  tile3d.rs
