[package]
name = "data"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true}
geo-types = "0.7.17"
linesonmaps = { path = "../linesonmaps" }
itertools = "0.14.0"
postgres = { version = "0.19.10", features = ["array-impls", "with-chrono-0_4"] }
thiserror = "2.0.16"
wkb = "0.9.0"

[dev-dependencies]
tempfile = "3.22.0"
dotenvy = "0.15.7"
