[package]
name = "linesonmaps"
version = "0.1.0"
edition = "2024"

[dependencies]
geo = {version = "0.31.0", features = ["proj"]}
geo-traits = "0.3.0"
geo-types = "0.7.17"
geographiclib-rs = "0.2.5"
proj = "0.31.0"
wkb = "0.9.0"

[dev-dependencies]
bytemuck = "1.23.2"
hex = "0.4.3"
pretty_assertions = "1.4.1"
