[package]
name = "linesonmaps"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
geo = {version = "0.31.0"}
geo-traits = "0.3.0"
geo-types = "0.7.17"
geographiclib-rs = "0.2.5"
itertools = "0.14.0"
thiserror = "2.0.16"
typed-builder = "0.22.0"
wkb = "0.9.0"
pretty_assertions = "1.4.1"
chrono = "0.4.42"

[dev-dependencies]
bytemuck = "1.23.2"
hex = "0.4.3"
